# nest

./: .env.example  .flake8  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  makefile  pyproject.toml
.github/workflows/: qa.yml
examples/nest-quickstart/: app_controller.py  app_module.py  main.py  pyproject.toml
examples/nest-quickstart/src/: main.py
examples/nest-quickstart/users/: __init__.py  user_controller.py  user_dto.py  user_module.py  user_repository.py  user_service.py
nest/common/: __init__.py  keys.py  typing.py  utils.py
nest/common/decorators/: __init__.py  controller_decorator.py  http_code_decorator.py  module_decorator.py  request_method_decorator.py
nest/common/decorators/core/: __init__.py  controller_decorator.py  injectable_decorator.py  version_decorator.py
nest/common/decorators/http/: __init__.py  header_decorator.py  http_code_decorator.py  (+1 more)
nest/common/enums/: __init__.py  docs_type.py  http_status.py  versioning_type.py
nest/common/interfaces/: __init__.py  nest_application_interface.py
nest/common/metadata/: __init__.py  cors_options.py  docs_options.py  global_prefix_options.py  route_metadata.py  versioning_options.py
nest/core/: __init__.py  application_config.py  nest_application.py  nest_factory.py
nest/core/injector/: dependency_injection.py
nest/core/router/: __init__.py  route_path_factory.py
test/common/core/: test_nest_application.py
test/core/nest_application/: test_enableCors.py  test_globalPrefix.py  test_nest_application.py  test_versioning.py
test/core/router/: test_route_path_factory.py
(+15 files in other folders)
