[tool.poetry]
name = "nestpy-framework"
version = "0.1.0"
description = "Modern, fast, powerful python web framework"
authors = ["Manuel S. Lemos <iam@manuelslemos.es>"]
# readme = "README.md"
license = "MIT"
packages = [{include = "nest"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.105.0"
pydantic = "2.5.3"
uvicorn = {extras = ["standard"], version = "0.25.0"}
kink = "0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"